--- a/index.html
+++ b/index.html
@@ -13,21 +13,29 @@
 
     <section>
         <div class="mission2022">
-            <h1 class="box">Stay Focused On <span class="color"  >mission2022 </span>  </h1>
-        
+            <h1 class="box">Stay Focused On <span class="color">mission2022 </span> </h1>
+
             <p class="text-aline">For many years I’ve had the we to visit nursing homes as
                 I truly enjoy spending time with the elderly. I sing and teach Bible
                 studies and appreciate hearing about their former lives. The Lord has
                 allowed me to make some precious friendships and I want to share with you about a
                 lovely lady who after a devastating stroke was no longer able to be independent and is
                 now in a comfortable setting where she is well taken care of</p>
-                <a class="link" target="_blank" href="https://www.facebook.com/md.mehadyhasanakash">Here-me</a>
+                <br>
+            <a class="link" target="_blank" href="https://www.facebook.com/md.mehadyhasanakash">Here-me</a>
+            <br> <br>
+            <p>Scroll down to explore more about us</p>
 
         </div>
         <div class="mission2022">
             <img src="mission-2022-main/images/person/person-0.png" alt="person-0">
         </div>
+    </section>
 
+    <section>
+        <div class="My-Mission">
+            <h1 >My Mission in 2022</h1>
+        </div>
     </section>
 
 
