--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
     <section>
         <div class="My-Mission">
-            <h1 >My Mission in 2022</h1>
+            <h1 >My Mission in <span class="color"> 2022 </span></h1>
         </div>
     </section>
 
