--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
 
-    <section>
+    <section class="display">
         <div class="mission2022">
             <h1 class="box">Stay Focused On <span class="color">mission2022 </span> </h1>
 
@@ -21,7 +21,7 @@
                 allowed me to make some precious friendships and I want to share with you about a
                 lovely lady who after a devastating stroke was no longer able to be independent and is
                 now in a comfortable setting where she is well taken care of</p>
-                <br>
+            <br>
             <a class="link" target="_blank" href="https://www.facebook.com/md.mehadyhasanakash">Here-me</a>
             <br> <br>
             <p>Scroll down to explore more about us</p>
@@ -32,9 +32,45 @@
         </div>
     </section>
 
-    <section>
+    <section class="second-display">
         <div class="My-Mission">
-            <h1 >My Mission in <span class="color"> 2022 </span></h1>
+            <h1>My Mission in <span class="color"> 2022 </span></h1>
+        </div>
+
+        <div class="container">
+
+            <div class="M-V-G">
+                <h3>Mission</h3>
+                <p>
+                    Amet minim mollit non deserunt
+                    ullamco est sit aliqua dolor do amet
+                    sint. Velit officia consequat duis enim
+                    velit mollit
+                </p>
+            </div>
+
+            <div class="" M-V-G"">
+                <h3>Vission</h3>
+                <p>
+                    Amet minim mollit non deserunt
+                    ullamco est sit aliqua dolor do amet
+                    sint. Velit officia consequat duis enim
+                    velit mollit
+                </p>
+
+            </div>
+            <div class="" M-V-G"">
+                <h3>Goals</h3>
+                <p>
+                    Amet minim mollit non deserunt
+                    ullamco est sit aliqua dolor do amet
+                    sint. Velit officia consequat duis enim
+                    velit mollit
+                </p>
+            </div>
+
+
+
         </div>
     </section>
 
