--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+    <!-- 1st section -->
 
     <section class="display">
         <div class="mission2022">
@@ -32,6 +33,9 @@
             <img src="mission-2022-main/images/person/person-0.png" alt="person-0">
         </div>
     </section>
+
+<!-- 2nd section -->
+
 
     <section class="second-display">
         <div class="My-Mission">
@@ -84,6 +88,27 @@
 
 
         </div>
+    </section>
+
+    <!-- 3rd section -->
+    <section class="width-hight">
+        <div class="code">
+            <img src="mission-2022-main/images/pictures/coding.png" alt="coding">
+        </div>
+        <div class="code">
+            <h1>Develop <br>  Without Limits</h1>
+            <p class="develop-pragraph">
+                This autobiographical case study reflects upon how a senior academic leader repurposed the Learning without Limits
+                pedagogical framework originally developed within UK primary and secondary school settings to inform the development of
+                a new transformational leadership framework within a higher education setting. Kolb’s Experiential Learning Cycle is used
+                to structure an analytically self-reflective account of the leadership behaviours deployed for a distributed model of academic
+                development to be effective, viewed through the lens of Learning without Limits. As a result, a new framework to inform
+                effective approaches to the leadership of change in higher education is suggested: Leading without Limits.</p>
+        </div>
+
+
+
+
     </section>
 
 
